<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_summary_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:text="@string/my_summary"
    android:layout_gravity= "center_horizontal"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:textSize="@dimen/text_large2"
    android:textColor="@color/black"
    />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    >

    <RelativeLayout
        android:id="@+id/total_items_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/total_items_heading"
            android:textSize="@dimen/text_medium2"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/total_items_no"
            android:textSize="@dimen/text_medium2"
            android:textColor="@color/black"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/total_items_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_spend_heading"
            android:textSize="@dimen/text_medium2"
            android:layout_alignParentLeft="true"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/total_monthly_spend_no"
            android:textSize="@dimen/text_medium2"
            android:textColor="@color/black"
            />

    </RelativeLayout>

</RelativeLayout>

</LinearLayout>