<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="@drawable/ripple"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="2dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="18dp">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_gravity="center_vertical"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <one.thebox.android.ViewHelper.MontserratTextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="Purifying Neem"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <one.thebox.android.ViewHelper.MontserratTextView
                    android:id="@+id/product_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="By Himalaya"
                    android:textColor="@color/primary_text_color"
                    android:textSize="10sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <one.thebox.android.ViewHelper.MontserratTextView
                        android:id="@+id/text_view_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="55ml"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <one.thebox.android.ViewHelper.MontserratTextView
                        android:id="@+id/no_of_options"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_horizontal_between_co_element"
                        android:padding="4dp"
                        android:background="@drawable/green_borders"
                        android:text=" + 5 more options"
                        app:typeface="montserratSemiBold"
                        android:textColor="@color/md_green_500"
                        android:textSize="14sp"/>

                </LinearLayout>

                <one.thebox.android.ViewHelper.MontserratTextView
                    android:id="@+id/repeat_every"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="Repeat Every:"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:typeface="montserratSemiBold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_frequency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:scrollbars="horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/holder_add_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/green_background"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <one.thebox.android.ViewHelper.MontserratTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginLeft="12dp"
                                android:layout_marginRight="12dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/subscribe"
                                android:textColor="@color/white"
                                android:textSize="@dimen/text_medium1"
                                app:typeface="montserratSemiBold" />


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/holder_adjust_quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="gone">


                            <one.thebox.android.ViewHelper.MontserratTextView
                                android:id="@+id/button_subtract"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/circular_drawable"
                                android:gravity="center"
                                android:text="-"
                                android:textColor="@color/md_green_500" />

                            <one.thebox.android.ViewHelper.MontserratTextView
                                android:id="@+id/no_of_item_selected"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:paddingLeft="12dp"
                                android:paddingRight="12dp"
                                android:paddingTop="8dp"
                                android:text="0"
                                android:textColor="@color/primary_text_color"
                                android:textSize="12dp" />


                            <one.thebox.android.ViewHelper.MontserratTextView
                                android:id="@+id/button_add"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/circular_drawable"
                                android:gravity="center"
                                android:text="+"
                                android:textColor="@color/md_green_500" />

                        </LinearLayout>

                        <one.thebox.android.ViewHelper.MontserratTextView
                            android:id="@+id/out_of_stock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/out_of_stock"
                            android:textColor="@color/md_red_800"
                            android:textSize="16sp"
                            android:visibility="gone"
                            app:typeface="montserratSemiBold" />

                    </FrameLayout>


                    <LinearLayout
                        android:id="@+id/holder_saving_amount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:background="@color/brilliant_rose" />

                        <one.thebox.android.ViewHelper.MontserratTextView
                            android:id="@+id/text_view_savings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="5 Rs Saving"
                            android:textColor="@color/brilliant_rose"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/saving_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/light_white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingTop="16dp">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_marginRight="8dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/primary_text_color"
                    android:visibility="gone" />

                <one.thebox.android.ViewHelper.MontserratTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_from_left_of_card"
                    android:layout_marginBottom="@dimen/margin_vertical_between_co_element"
                    android:text="@string/suggested_categories"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:typeface="montserratSemiBold" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/relatedCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/vector_background"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="8dp"/>

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>